tests/baselines/reference/unusedLocalsinConstructor1.errors.txt
tests/cases/compiler/unusedLocalsinConstructor1.ts(4,13): error TS6133: Variable 'unused' has never been used.


==== tests/cases/compiler/unusedLocalsinConstructor1.ts (1 errors) ====
    
    class greeter {
        constructor() {
            var unused = 20;
                ~~~~~~
!!! error TS6133: Variable 'unused' has never been used.
        }
    }